Calculate capacity for consumer when not provided