@@ -24,7 +24,7 @@ public interface Builder<E> {
 			@Override
             public E newInstance() {
 	            try {
-	            	return klass.newInstance();
+	            	return klass.getDeclaredConstructor().newInstance();
 	            } catch(Exception e) {
 	            	throw new RuntimeException(e);
 	            }
